# CameraFrameSync

./: CMakeLists.txt  CameraFrameSync.hpp  CameraFrameSyncImpl.hpp  CameraFrameSyncStateMachine.hpp  CameraFrameSyncSubscriber.hpp  README.md  camera_frame_sync_core.hpp  camera_frame_sync_impl.hpp  camera_frame_sync_recording.hpp  camera_frame_sync_sequence_logic.hpp  camera_frame_sync_state_machine.hpp  camera_frame_sync_subscriber.hpp
.github/workflows/: build.yml
tests/: CMakeLists.txt  sequence_test.cpp
